Fixed numbers display, aligned to right now

--- a/theme/basic.css
+++ b/theme/basic.css
@@ -1,1 +1,2 @@
 tr.highlight_address > td { background-color: #222222 !important; color: #cccccc !important; }
+td.numbers { text-align: right; }
